v2.01 - Still not efficient enough
	Performance
		Fixed a bug causing randomBiome backgrounds to never get deleted after leaving the biome
		Optimized click boosting from O(n) to O(1) complexity, massively reducing CPU cost
		Increased blocking rate of lategameThrottle() from 30% to 85%
		Throttled hexScanner movement controller from 60FPS to 1FPS
		Optimized hexScanner movement controller to not use complex math operations
		Slightly optimized logic in basic shape movement 
	General Bugfixes
		Fixed a bug where 2.0's throttled FPS of stars and planets made click boosting look bad
		Fixed a bug where lategameThrottle() could temporarily break game initialization




v2.0 - Big maintenance patch for 2020
	Summary
		Improved CPU performance by up to 20% when lots of shapes are onscreen
		Fixed a bug where audio was completely dead in Safari due to new autoplay protection
		Reduced most upgrade prices by 20%
		Reduced download size by 63% (66MB)
		Changed some UI to reduce crypticness
		Many bugfixes
	Performance
		Optimized updateResourceCounter() to not use the DOM state as a source of data
		Optimized recheckItemCostHighlighting() to only fire when collecting shapes, not every three seconds
		Throttled less essential parts of updateResourceCounter() when there's a ton of shapes onscreen
		Throttled all of recheckItemCostHighlighting() when there's a ton of shapes onscreen
		Fixed significant amounts of JS garbage being created / collected
		Throttled sky gradients from 60FPS to 4FPS
		Throttled stars and planets from 60FPS to 10FPS
	Audio
		Fixed a bug where audio was completely dead in Safari due to new autoplay protection
		Changed music format from MP3 to OPUS, reducing asset filesize by 65% (54MB)
		Changed SFX format from WAV to OPUS, reducing asset filesize by 85% (12MB)
		Fixed broken music filepaths in the demo version
		Fixed a bug where multiple music tracks could sometimes play at once
	New player experience
		Reduced most upgrade prices by 20%